# dreadnom

./: .gitignore  Cargo.toml  README.md  artifacts.json  compare-to-baseline.sh  dev-oranda.sh  dist-workspace.toml  dreadnom-installer.ps1.txt  dreadnom-installer.sh.txt  fix-release.workflow.sh  index.html  oranda.json  update_baseline.sh
.github/workflows/: ci.yml  web.yml
artifacts/: index.html
src/: lib.rs  main.rs  obsidianize.rs  parse.rs  readme-template.md  source.rs
tests/: compare_to_baseline.rs  fs.rs
