[package]
name = "dreadnom"
version = "0.1.0"
edition = "2024"
authors = ["Yarrow Angelweed <yarrow.angelweed@gmail.com>"]
description = "dreadnom ajusts Raging Swan's Dread Thingonomicon and Dread Laironomicon for automatic dice rolling in Obsidian"
documentation = "https://github.com/yarrow/dreadnom"
homepage = "https://github.com/yarrow/dreadnom"
repository = "https://github.com/yarrow/dreadnom"
readme = "README.md"
keywords = ["obsidian", "raging-swan","rpg", "ttrg"]
categories = ["command-line-utilities", "parser-implementations"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.94"
camino = "1.1.9"
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }
color-print = "0.3.7"
logos = "0.15.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
tinytemplate = "1.2.1"
zip = "2.2.2"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
dir-diff = "0.3.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
